# evaclub-ui/src/app/services/models/create-preference-request.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface CreatePreferenceRequest {
+  currencyId?: string;
+  price?: number;
+  productId?: string;
+  quantity?: number;
+  title?: string;
+}
