# evaclub-ui/src/app/services/models/create-preference-response.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface CreatePreferenceResponse {
+  id?: string;
+}
