# evaclub/src/main/java/com/frank/evaclub/mercadopago/dtos/CreatePreferenceRequest.java
@@ -1,0 +1,9 @@
+package com.frank.evaclub.mercadopago.dtos;
+
+public record CreatePreferenceRequest(
+        String title,
+        Integer quantity,
+        Double price,
+        String productId,
+        String currencyId
+) {}
